Some initial rework of Gradle builds scripts